I have added and improved comments on my html and css pages

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -48,40 +48,49 @@
                     <!-- location and name of video. "controls" allows video to controlled by user -->
                     <video src="Streetwear.mp4" type= "video/MP4" controls  width= "600vw" height= "800vh" position="relative" float="right"></video>
                         <section class="right">
-                            <!-- info for hip-hop flip card, also lets me style the card in css-->
+                            <!-- info for Hip-hop flip card, also lets me style the front and inner of the card in css-->
                             <div class="Hip-hop">
                                 <div class="Hip-hop-inner">
                                     <div class="Hip-hop-front">
                                         <img src="hip-hop.jpg" width= "310px" height="360px" alt="break dancer">
                                     </div>
+                                        <!-- Allows me to style the back of the card in css-->
                                         <div class="Hip-hop-back">
+                                            <!-- Flip card header-->
                                             <h1> Hip-Hop</h1>
+                                            <!-- Flip card text-->
                                             <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new stye of fashion that was created alongside it. By the 90s Hip-Hop had popularised ‘street-wear’ moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing barnds such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the begining of designer brands catering to the ‘street culture’ asthetic. <strong>Read More.</strong></p>
                                         </div>
                                 </div>
                             </div>
                             <br> 
-                                <!-- info for skating flip card, also lets me style the card in css-->
+                                <!-- info for skating flip card, also lets me style the front and inner of the card in css-->
                                 <div class="skating">
                                     <div class="skating-inner">
                                         <div class="skating-front">
                                             <img src="skating.jpg" width= "309px" height="335px" alt="skater">
                                         </div>
+                                            <!-- Allows me to style the back of the card in css-->
                                             <div class="skating-back">
+                                                <!-- Flip card header-->
                                                 <h1> Skating</h1>
+                                                <!-- Flip card text-->
                                                 <p> Whilst Hip-Hop is said to  have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specialifically to skate culture. They both have played a crucial role in devloping the 90s asthetic. Even now many rappers and skaters share a similar asthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more domminance on both scenes.<strong>Read More.</strong></p>
                                             </div>
                                     </div>
                                 </div> 
                                 <br> 
-                                <!-- info for Japenese streetwear flip card, also lets me style the card in css-->
+                                <!-- info for Japenese-streetwear flip card, also lets me style the front and inner of the card in css-->
                                 <div class="japenese-streetwear">
                                     <div class="japenese-streetwear-inner">
                                         <div class="japenese-streetwear-front">
                                             <img src="cdg.jpg" width= "309px" height="460px" alt="skater">
                                         </div>
+                                            <!-- Allows me to style the back of the card in css-->
                                             <div class="japenese-streetwear-back">
+                                                 <!-- Flip card header-->
                                                 <h1> Japenese Streetwear</h1>
+                                                 <!-- Flip card text-->
                                                 <p> Japanese streetwear also known as Harajuku aesthetic is very prevelant in global streetwear culture. In the 70s and 80s Japanese youth began to rebel against the elders traditions and embrace western culture. Japanese streetwear is a representation of this defiance and non conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativty and designing in Japan as we know it today. Brands such as UNDERCOVER, NEIGHBORHOOD & WTAPS paved the way for brands such as Bape, Commes Des Garcons & AMBUSH.<strong>Read More</strong></p>
                                             </div>
                                     </div>
@@ -90,40 +99,49 @@
                             <br> 
                             <!-- allows me to style everything in this section -->
                             <section class="left">
-                                <!-- info for basketball flip card, also lets me style the card in css-->
+                                <!-- info for basketball flip card, also lets me style the front and inner of the card in css-->
                                 <div class="basketball">
                                     <div class="basketball-inner">
                                         <div class="basketball-front">
                                             <img src="basketball.jpg" width= "310px" height="360px" alt="skater">
                                         </div>
+                                            <!-- Allows me to style the back of the card in css-->
                                             <div class="basketball-back">
+                                                <!-- Flip card header-->
                                                 <h1> Basketball</h1>
+                                                <!-- Flip card text-->
                                                 <p> During the early 80's there was a growing demand for athletic wear to be worn for asthetic. Street ball was also growing in popularity. The Nike air Jordan 1 brought alot of controversy to professional basketball, but the shoe was a huge success as a fashion statement, and helped nike to achive the streetwear staus it has today.  To this day the Jordan and Nike are mayor players in the sneakers game. Sports attire such as jerseys and sneakers have had great influnce on fashion. Some of which is still evident today. With some of the most succesfull sneaker ‘drops’ being tied to iconic sporting events or players<strong>Read More.</strong></p>
                                             </div>
                                     </div>
                                 </div>
                                 <br> 
-                                <!-- info for street art flip card, also lets me style the card in css-->
+                                <!-- info for street-art card, also lets me style the front and inner of the card in css-->
                                 <div class="street-art">
                                     <div class="street-art-inner">
                                         <div class="street-art-front">
                                             <img src="Street-art.png" width= "309px" height="335px" alt="skater">
                                         </div>
+                                            <!-- Allows me to style the back of the card in css-->
                                             <div class="street-art-back">
+                                                <!-- Flip card header-->
                                                 <h1> Street art</h1>
+                                                <!-- Flip card text-->
                                                 <p> The early 80s saw other subsections of street culutre such as street art also infulencing fashion at that time. Artist such as Keith Heiring. are recognised for being one of the first street artist to bring their art styles to museums and galleries. For these reasons Artisits like Keith Harring  are regarded as street art pioneers, having collabarted with vivenne westwood. At the time challenging the norms of high end fashion and paving the way for the ‘luxury streetwear’ asthetic we have today. With street art maintaining its prensence in the fashion world today.<strong>Read More.</strong></p>
                                             </div>
                                     </div>
                                 </div>
                                 <br>
-                                <!-- info for haute coture flip card, also lets me style the card in css-->
+                                <!-- info for haute coture flip card, also lets me style the front and inner of the card in css-->
                                 <div class="haute-coture">
                                     <div class="haute-coture-inner">
                                         <div class="haute-coture-front">
                                             <img src="LV-Trainers.jpg" width= "310px" height="460px" alt="Louis Vutton & Nike Air Jordan 1 Trainers">
                                         </div>
+                                          <!-- Allows me to style the back of the card in css-->
                                             <div class="haute-coture-back">
+                                                 <!-- Flip card header-->
                                                 <h1> Haute Coture</h1>
+                                                <!-- Flip card text-->
                                                 <p> The 80s were crucial to the Streetwear, Haute Coture crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of LV.  Gucci releasing their Gucci Ghost collection with clear street culture infulence. High end designers collaborating with streetwear brands has become increasing common.  Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion.  Street culture continues to evolve and push the boundaries.  If you would like to contribute to its evolution,<strong>Join us.</strong></p>
                                             </div>
                                     </div>
@@ -132,7 +150,9 @@
                    
     </body>
     <footer>
+        <!-- Allows me to style the footer-->
         <div class="footer">
+            <!-- Footer text-->
            <p>Copyright Brieanna McDonald 2021</p>
         </div>
     </footer>
