added/edit comments on all html pages

--- a/Exclusives.html
+++ b/Exclusives.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- metda data for the code--> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- links my css and html pages--> 
         <link rel="stylesheet" href="Exclusives.css" type="text/css" />
+
+         <!-- this allows me to import icons from font awseome and fonts from google fonts -->
         <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
+
+            <!-- this only applies to the landing page menu. Creates a list for the social media icons which I can then style-->
             <section class="landing-page-menu">
                 <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
                 <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
