--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet">
 
-      <!-- this only applies to the landing page header, adds the logo and creates a list for the social media icons which I can then style--> 
+      <!-- this only applies to the landing page menu, adds the logo and creates a list for the social media icons which I can then style--> 
       <section class="landing-page-header">
           <img src = "Logo.png" type= "png" width="200" class="logo"/>
               <ul class="fa-ul">
