--- a/Exclusives.html
+++ b/Exclusives.html
@@ -44,7 +44,7 @@
 
                            <!-- sets Niche label and allows me to style it-->
                           <label for="Niche" class="label">What is your Niche:</label><br>
-                          
+
                             <!-- form drop down-->
                             <select name="Niche"id="Niche" >
                                 <!-- form drop down options-->
@@ -62,6 +62,12 @@
                               <!-- sets button text and allows me to style it-->
                                 <button type="submit" class= "sign-up" onclick="alert('We have recieved your request and will add your email to the exclusive mailing list, so stay tuned for updates !')">Sign me up !</button>
                 </form>
-      </body>
-   
+    </body>
+    <footer>
+         <!-- allows me to style the footer-->
+        <div class="footer">
+          <!-- sets footer text-->
+          <p>Copyright Brieanna McDonald 2021</p>
+        </div>
+    </footer>
 </html>
