typo fixed and pages now linked.

--- a/Exclusives.html
+++ b/Exclusives.html
@@ -16,7 +16,7 @@
                 <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
                 <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
                 <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-                <a href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+                <a href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
                 <a class="active" href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
             </section>  
                 
@@ -28,22 +28,22 @@
           <!-- sets header texts and allows me to style it-->
             <h1 class="txt" > Sign up for exclusive events, drops and updates !!</h1>
               <br>
-                <!-- sign up fotm-->
+                <!-- sign up form-->
                 <form >
                  <!-- allows me to style it and sets the label for the name part of the form-->
-                  <label for=" name" class="label">Name:</label><br>
+                  <label for=" name" class="input">Name:</label><br>
 
                     <!-- validates text in the form. It also sets place holder text-->
                     <input required type= "text" id="first" name="first" placeholder="First name or nickname"><br>
 
                     <!-- allows me to style it and sets the label for the email part of the form-->
-                      <label for="Email"class="label">Email:</label><br>
+                      <label for="Email"class="input">Email:</label><br>
 
                       <!-- validaties emails . It also sets place holder text-->
                         <input required type="email" id="email" name="email" placeholder="Jazzy@gmail.com"><br><br>
 
                            <!-- sets Niche label and allows me to style it-->
-                          <label for="Niche" class="label">What is your Niche:</label><br>
+                          <label for="Niche">What is your Niche:</label><br>
 
                             <!-- form drop down-->
                             <select name="Niche"id="Niche" >
