--- a/Exclusives.html
+++ b/Exclusives.html
@@ -29,18 +29,18 @@
             <h1 class="txt" > Sign up for exclusive events, drops and updates !!</h1>
               <br>
                 <!-- sign up form-->
-                <form >
-                 <!-- allows me to style it and sets the label for the name part of the form-->
-                  <label for=" name" class="input">Name:</label><br>
+                <form>
+                 <!-- Sets the label and text for the name part of the form-->
+                  <label for=" name">Name:</label><br>
 
                     <!-- validates text in the form. It also sets place holder text-->
-                    <input required type= "text" id="first" name="first" placeholder="First name or nickname"><br>
+                    <input required type="text" id="first" name="first" placeholder="First name or nickname"></input><br><br>
 
-                    <!-- allows me to style it and sets the label for the email part of the form-->
-                      <label for="Email"class="input">Email:</label><br>
+                    <!-- Sets the label and text for the email part of the form-->
+                      <label for="Email">Email:</label><br>
 
                       <!-- validaties emails . It also sets place holder text-->
-                        <input required type="email" id="email" name="email" placeholder="Jazzy@gmail.com"><br><br>
+                        <input required type="email" id="email" name="email" placeholder="Jazzy@gmail.com"></input><br><br>
 
                            <!-- sets Niche label and allows me to style it-->
                           <label for="Niche">What is your Niche:</label><br>
