--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -45,8 +45,13 @@
                      <p class=> Street culture is a term used to refer to urban culture. Like all cultures, streetculutre has an asthetic of its own. Streetwear is casual wear that has become popularise by its exclusive nature. The flip cards below document the evolution of this asthetic and give insight into the different factions of street culture that have impacted the asthetic. </p>
                  </section>
 
-                    <!-- location and name of video. "controls" allows video to controlled by user -->
-                    <video src="Streetwear.mp4" type= "video/MP4" controls  width= "600vw" height= "800vh" position="relative" float="right"></video>
+                    <!--  "controls" allows video to controlled by user. "Preload" allows the video to automaticaly preload.-->
+                    <video controls  preload="auto"  class="video">
+                       <!-- location and type of video.-->
+                       <source src="Streetwear.mp4" type= "video/MP4">
+
+
+                    </video>
                         <section class="right">
                             <!-- info for Hip-hop flip card, also lets me style the front and inner of the card in css-->
                             <div class="Hip-hop">
