--- a/Exclusives.html
+++ b/Exclusives.html
@@ -29,7 +29,7 @@
             <h1 class="txt" > Sign up for exclusive events, drops and updates !!</h1>
               <br>
                 <!-- sign up form-->
-                <form>
+                <form class="form">
                  <!-- Sets the label and text for the name part of the form-->
                   <label for=" name">Name:</label><br>
 
@@ -62,6 +62,12 @@
                               <!-- sets button text and allows me to style it-->
                                 <button type="submit" class= "sign-up" onclick="alert('We have recieved your request and will add your email to the exclusive mailing list, so stay tuned for updates !')">Sign me up !</button>
                 </form>
+                    <!--  "controls" allows video to controlled by user. "Preload" allows the video to automaticaly preload."class" allows me to stlye the video-->
+                    <video  controls preload="auto" class="video">
+                      <!-- Location and type of video.-->
+                        <source src="Streetwear.mp4" type= "video/mp4">
+                        <source src="Streetwear.ogg" type= "video/ogg">  
+                    </video>
     </body>
     <footer>
          <!-- allows me to style the footer-->
