--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -44,14 +44,7 @@
                     <!-- main body text-->
                      <p class=> Street culture is a term used to refer to urban culture. Like all cultures, streetculutre has an asthetic of its own. Streetwear is casual wear that has become popularise by its exclusive nature. The flip cards below document the evolution of this asthetic and give insight into the different factions of street culture that have impacted the asthetic. </p>
                  </section>
-                    
-                
-                    <!--  "controls" allows video to controlled by user. "Preload" allows the video to automaticaly preload.location and type of video.-->
-                    <video width="40%" controls preload="auto" class="video">
-                        <source src="Streetwear.mp4" type= "video/mp4">
-                        <source src="Streetwear.ogg" type= "video/ogg">
-                    </video>
-
+                   <!-- only applies to the right side of the flip cards-->
                     <section class="right">
                         <!-- info for Hip-hop flip card, also lets me style the front and inner of the card in css-->
                         <div class="Hip-hop">
