--- a/Exclusives.html
+++ b/Exclusives.html
@@ -60,9 +60,9 @@
                             </select>
                               <br><br>
                               <!-- sets button text and allows me to style it-->
-                                <button type="submit" class= "sign-up" onclick="alert('We have recieved your request and will add your email to the exclusive mailing list, so stay tuned for updates !')">Sign me up !</button>
+                                <button type="submit" class= "sign-up" >Sign me up !</button>
                 </form>
-                    <!--  "controls" allows video to controlled by user. "Preload" allows the video to automaticaly preload."class" allows me to stlye the video-->
+                    <!--  "controls" allows video to be controlled by user. "Preload" allows the video to automaticaly preload."class" allows me to stlye the video-->
                     <video  controls preload="auto" class="video">
                       <!-- Location and type of video.-->
                         <source src="Streetwear.mp4" type= "video/mp4">
