I have linked the social media icons to the webpages

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
       <!-- this only applies to the landing page menu, adds the logo and creates a list for the social media icons which I can then style--> 
       <section class="landing-page-header">
           <img src = "Logo.png" type= "png" width="200" class="logo"/>
-              <ul class="fa-ul">
-                 <li><i class="fa-li fa fa-instagram"></i>Vibe_Tribe</li>
-                 <li><i class="fa-li fa fa-snapchat"></i>Vibe_Tribe</li>
-                 <li><i class="fa-li fa fa-facebook"></i>Vibe Tribe</li>
-              </ul>
+               <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
+               <a href="https://accounts.snapchat.com/accounts/"class="fa fa-snapchat x3"></a>
+               <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
+               <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
       </section>
 
       <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
