--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -57,7 +57,7 @@
                                         <!-- Flip card header-->
                                         <h1> Hip-Hop</h1>
                                         <!-- Flip card text-->
-                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new stye of fashion that was created alongside it. By the 90s Hip-Hop had popularised ‘street-wear’ moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing barnds such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the begining of designer brands catering to the ‘street culture’ asthetic. <strong>Read More.</strong></p>
+                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic. <strong>Read More.</strong></p>
                                     </div>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                                             <!-- Flip card header-->
                                             <h1> Skating</h1>
                                             <!-- Flip card text-->
-                                            <p> Whilst Hip-Hop is said to  have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specialifically to skate culture. They both have played a crucial role in devloping the 90s asthetic. Even now many rappers and skaters share a similar asthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more domminance on both scenes.<strong>Read More.</strong></p>
+                                            <p> Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specifically to skate culture. They both have played a crucial role in developing the 90s aesthetic. Even now many rappers and skaters share a similar aesthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more dominance in both scenes.<strong>Read More.</strong></p>
                                         </div>
                                 </div>
                             </div> 
@@ -89,7 +89,7 @@
                                              <!-- Flip card header-->
                                             <h1> Japenese Streetwear</h1>
                                              <!-- Flip card text-->
-                                            <p> Japanese streetwear also known as Harajuku aesthetic is very prevelant in global streetwear culture. In the 70s and 80s Japanese youth began to rebel against the elders traditions and embrace western culture. Japanese streetwear is a representation of this defiance and non conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativty and designing in Japan as we know it today. Brands such as UNDERCOVER, NEIGHBORHOOD & WTAPS paved the way for brands such as Bape, Commes Des Garcons & AMBUSH.<strong>Read More</strong></p>
+                                            <p> Japanese streetwear is also known as the Harajuku aesthetic is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativity and design in Japan as we know it today. Brands such as UNDERCOVER, NEIGHBORHOOD & WTAPS paved the way for brands such as Bape, Commes Des Garcons & AMBUSH.<strong>Read More</strong></p>
                                         </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                             <!-- Flip card header-->
                                             <h1> Basketball</h1>
                                             <!-- Flip card text-->
-                                            <p> During the early 80's there was a growing demand for athletic wear to be worn for asthetic. Street ball was also growing in popularity. The Nike air Jordan 1 brought alot of controversy to professional basketball, but the shoe was a huge success as a fashion statement, and helped nike to achive the streetwear staus it has today.  To this day the Jordan and Nike are mayor players in the sneakers game. Sports attire such as jerseys and sneakers have had great influnce on fashion. Some of which is still evident today. With some of the most succesfull sneaker ‘drops’ being tied to iconic sporting events or players<strong>Read More.</strong></p>
+                                            <p> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today.  To this day the Jordan and Nike are major players in the sneakers game. Sports attire such as jerseys and sneakers have had a great influence on fashion. Some of which is still evident today. With some of the most successful sneaker ‘drops’ being tied to iconic sporting events or players<strong>Read More.</strong></p>
                                         </div>
                                 </div>
                             </div>
@@ -124,7 +124,7 @@
                                             <!-- Flip card header-->
                                             <h1> Street art</h1>
                                             <!-- Flip card text-->
-                                            <p> The early 80s saw other subsections of street culutre such as street art also infulencing fashion at that time. Artist such as Keith Heiring. are recognised for being one of the first street artist to bring their art styles to museums and galleries. For these reasons Artisits like Keith Harring  are regarded as street art pioneers, having collabarted with vivenne westwood. At the time challenging the norms of high end fashion and paving the way for the ‘luxury streetwear’ asthetic we have today. With street art maintaining its prensence in the fashion world today.<strong>Read More.</strong></p>
+                                            <p> The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers. Having collaborated with the likes of Vivienne Westwood,  challenging the norms of high-end fashion at that time and paving the way for the ‘luxury streetwear’ aesthetic, we have today.<strong>Read More.</strong></p>
                                         </div>
                                 </div>
                             </div>
@@ -140,7 +140,7 @@
                                              <!-- Flip card header-->
                                             <h1> Haute Coture</h1>
                                             <!-- Flip card text-->
-                                            <p> The 80s were crucial to the Streetwear, Haute Coture crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of LV.  Gucci releasing their Gucci Ghost collection with clear street culture infulence. High end designers collaborating with streetwear brands has become increasing common.  Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion.  Street culture continues to evolve and push the boundaries.  If you would like to contribute to its evolution,<strong>Join us.</strong></p>
+                                            <p> The 80s were crucial to the Streetwear, Haute Coture crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of LV.  Gucci releasing their Gucci Ghost collection with clear street culture infulence. High end designers collaborating with streetwear brands has become increasing common.  Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion.  Street culture continues to evolve and push the boundaries.  If you would like to contribute to its evolution,<strong>Join us and stay up to date.</strong></p>
                                         </div>
                                 </div>
                             </div>
