--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -78,16 +78,16 @@
                                 </div>
                             </div> 
                             <br> 
-                            <!-- info for Japenese-streetwear flip card, also lets me style the front and inner of the card in css-->
-                            <div class="japenese-streetwear">
-                                <div class="japenese-streetwear-inner">
-                                    <div class="japenese-streetwear-front">
+                            <!-- info for Japanese-streetwear flip card, also lets me style the front and inner of the card in css-->
+                            <div class="japanese-streetwear">
+                                <div class="japanese-streetwear-inner">
+                                    <div class="japanese-streetwear-front">
                                         <img src="cdg.jpg" width= "309px" height="460px" alt="skater">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
-                                        <div class="japenese-streetwear-back">
+                                        <div class="japanese-streetwear-back">
                                              <!-- Flip card header-->
-                                            <h1> Japenese Streetwear</h1>
+                                            <h1> Japanese Streetwear</h1>
                                              <!-- Flip card text-->
                                             <p> Japanese streetwear is also known as the Harajuku aesthetic is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativity and design in Japan as we know it today. Brands such as UNDERCOVER, NEIGHBORHOOD & WTAPS paved the way for brands such as Bape, Commes Des Garcons & AMBUSH.<strong>Read More</strong></p>
                                         </div>
