created, link & styled Hip-Hop page for flip cards.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -57,7 +57,7 @@
                                         <!-- Flip card header-->
                                         <h1> Hip-Hop</h1>
                                         <!-- Flip card text-->
-                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic. <strong>Read More.</strong></p>
+                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing brands such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the beginning of designer brands catering to the street culture aesthetic. <strong><a href="Hip-Hop.html">Read More.</a></strong></p>
                                     </div>
                             </div>
                         </div>
