created, linked & styled Street-art page for flip card.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -124,7 +124,7 @@
                                             <!-- Flip card header-->
                                             <h1> Street art</h1>
                                             <!-- Flip card text-->
-                                            <p> The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers. Having collaborated with the likes of Vivienne Westwood,  challenging the norms of high-end fashion at that time and paving the way for the ‘luxury streetwear’ aesthetic, we have today.<strong>Read More.</strong></p>
+                                            <p> The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers. Having collaborated with the likes of Vivienne Westwood,  challenging the norms of high-end fashion at that time and paving the way for the ‘luxury streetwear’ aesthetic, we have today.<strong><a href="Street-art.html"target="_blank">Read More.</a></strong></p>
                                         </div>
                                 </div>
                             </div>
