created, styled and linked skating page for flip card

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -73,7 +73,7 @@
                                             <!-- Flip card header-->
                                             <h1> Skating</h1>
                                             <!-- Flip card text-->
-                                            <p> Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specifically to skate culture. They both have played a crucial role in developing the 90s aesthetic. Even now many rappers and skaters share a similar aesthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more dominance in both scenes.<strong>Read More.</strong></p>
+                                            <p> Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specifically to skate culture. They both have played a crucial role in developing the 90s aesthetic. Even now many rappers and skaters share a similar aesthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more dominance in both scenes.<strong><a href="Skating.html" target="_blank">Read More.</a></strong></p>
                                         </div>
                                 </div>
                             </div> 
