alt text corrections

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -82,7 +82,7 @@
                             <div class="japanese-streetwear">
                                 <div class="japanese-streetwear-inner">
                                     <div class="japanese-streetwear-front">
-                                        <img src="cdg.jpg" width= "309px" height="460px" alt="skater">
+                                        <img src="cdg.jpg" width= "309px" height="460px" alt="CDG trainers">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="japanese-streetwear-back">
@@ -101,7 +101,7 @@
                             <div class="basketball">
                                 <div class="basketball-inner">
                                     <div class="basketball-front">
-                                        <img src="basketball.jpg" width= "310px" height="360px" alt="skater">
+                                        <img src="basketball.jpg" width= "310px" height="360px" alt="basketball">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="basketball-back">
@@ -117,7 +117,7 @@
                             <div class="street-art">
                                 <div class="street-art-inner">
                                     <div class="street-art-front">
-                                        <img src="Street-art.png" width= "309px" height="335px" alt="skater">
+                                        <img src="Street-art.png" width= "309px" height="335px" alt="street art">
                                     </div>
                                         <!-- Allows me to style the back of the card in css-->
                                         <div class="street-art-back">
