--- a/Skating.html
+++ b/Skating.html
@@ -7,7 +7,7 @@
         <h1><strong>Skating</strong></h1>
 
         <p>Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like <a href="https://www.stussy.co.uk/collections/new-arrivals" target="_blank">Stussy</a> catering specifically to skate culture. They both have played a crucial role in developing the 90s skate aesthetic. Even now many rappers and skaters share a similar aesthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more dominance in both scenes.<br><br> Supreme has is roots in skate culutre and today it is arguably the most successful streetwear brands, known for its regular collaboration with exlcusive brands such Louis Vuitton, Supreme also have a long standing partnership with CDG and have managed to grow their audicence beyond skaters apealling to the masses and producing a range of items not just clothing.</p>
-        <img src=skaters.jpg type="jpg" alt="" width="250px"><br><br>
+        <img src="Supreme-x-Stone-Island.png" type="png" alt="Supreme x Stone Island jacket" width="250px"><br><br>
         <a href= "https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank">Click here</a> to learn more about the Supreme x Stone Island colab.</a> <br><br> To visit the supreme store <a href="https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank">click here</a>
      </body>
      <footer></footer>
