Flip cards do not work on mobile, created seperate class to create clickable images for mobile screens.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -144,7 +144,15 @@
                                         </div>
                                 </div>
                             </div>
-                        </section>    
+                        </section> 
+                            <section class="pictures">
+                                <img src="hip-hop.jpg" width="320px" height="400px">
+                                <img src="skating.jpg" width="320px" height="400px">
+                                <img src="cdg.jpg" width="320px" height="400px">
+                                <img src="basketball.jpg" width="320px" height="400px">
+                                <img src="Street-art.png"width="320px" height="400px">
+                                <img src="LV-Trainers.jpg"width="320px" height="400px">
+                            </section>   
     </body>
     <footer>
         <!-- Allows me to style the footer-->
