I have added the social media icons to the footer so that they are visibile on  all the pages, and to keep the layout consistent

--- a/Exclusives.html
+++ b/Exclusives.html
@@ -70,10 +70,13 @@
                     </video>
     </body>
     <footer>
-         <!-- allows me to style the footer-->
-        <div class="footer">
-          <!-- sets footer text-->
+      <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons--> 
+      <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
-        </div>
+          <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
+               <a href="https://accounts.snapchat.com/accounts/"class="fa fa-snapchat x3"></a>
+               <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
+               <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
+      </div>
     </footer>
 </html>
