--- a/about us.html
+++ b/about us.html
@@ -44,9 +44,13 @@
          </section>  
     </body>
     <footer>
-      <!-- allow me to style the footer using css and sets the text that will be visble in the footer--> 
+      <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons--> 
       <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
+               <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
+               <a href="https://accounts.snapchat.com/accounts/"class="fa fa-snapchat x3"></a>
+               <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
+               <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
       </div>
    </footer>
 </html>
