--- a/come to the hub.html
+++ b/come to the hub.html
@@ -61,10 +61,13 @@
                   <P1 class="text"><strong>The hub is open 24hrs.</strong><br>Under 18s <strong><u>MUST</u> </strong>be accompanied by an adult. <br><br> <u><strong>Spaces for activites are limited.</strong></u> We recommend signing up to get early access to registration.</P1>
     </body>
     <footer>
-       <!-- Allows me to style the footer-->
+      <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons--> 
       <div class="footer">
-        <!-- Footer text-->
-         <p>Copyright Brieanna McDonald 2021</p>
+          <p>Copyright Brieanna McDonald 2021</p>
+               <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
+               <a href="https://accounts.snapchat.com/accounts/"class="fa fa-snapchat x3"></a>
+               <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
+               <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
       </div>
-    </footer>   
+    </footer>
 </html>
