--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet">
 
-      <!-- this only applies to the landing page menu, adds the logo and creates a list for the social media icons which I can then style--> 
+      <!-- this only applies to the landing page menu and adds the logo which I can then style--> 
       <section class="landing-page-header">
           <img src = "Logo.png" type= "png" width="200" class="logo"/>
-               <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
-               <a href="https://accounts.snapchat.com/accounts/"class="fa fa-snapchat x3"></a>
-               <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
-               <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
       </section>
 
       <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
@@ -42,9 +38,13 @@
    </body>
 
    <footer>
-      <!-- allow me to style the footer using css and sets the text that will be visble in the footer--> 
+      <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons--> 
       <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
+          <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
+               <a href="https://accounts.snapchat.com/accounts/"class="fa fa-snapchat x3"></a>
+               <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
+               <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
       </div>
    </footer>
 </html>
