I have updated the snapchat link on all the pages as the accounts page only works on mobiles.

--- a/about us.html
+++ b/about us.html
@@ -48,7 +48,7 @@
       <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
                <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
-               <a href="https://accounts.snapchat.com/accounts/"class="fa fa-snapchat x3" style= "color:rgb(97,28,169)"></a>
+               <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3" style= "color:rgb(97,28,169)"></a>
                <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
                <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
       </div>
