--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 
    <footer>
       <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons--> 
-      <div class="footer">
-          <p>Copyright Brieanna McDonald 2021</p>
-          <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
-               <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3" style= "color:rgb(97,28,169)"></a>
-               <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
-               <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
-      </div>
+      <section class="footer"> 
+         <p>Copyright Brieanna McDonald 2021</p>
+             <div class="social.media">
+                 <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
+                 <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3" style= "color:rgb(97,28,169)"></a>
+                 <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
+                 <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
+             </div>
+     </section>
    </footer>
 </html>
 
