I have stylef the social media icons so that theyre are on the right side of the footer and inline with the text on all the pages

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -63,11 +63,11 @@
     <footer>
       <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons--> 
       <section class="footer"> 
-        <p>Copyright Brieanna McDonald 2021</p>
-                <a href="https://www.instagram.com/"class="fa fa-instagram x3"></a>
-                <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3" style= "color:rgb(97,28,169)"></a>
-                <a href="https://www.facebook.com/"class="fa fa-facebook x3"></a>
-                <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3"></a>
+                <a href="https://www.instagram.com/"class="fa fa-instagram x3 fa-pull-right"></a>
+                <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(97,28,169)"></a>
+                <a href="https://www.facebook.com/"class="fa fa-facebook x3 fa-pull-right"></a>
+                <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3 fa-pull-right"></a>
+                 <p>Copyright Brieanna McDonald 2021</p>
       </section>
     </footer>
 </html>
