I have hyperlinked the pictures on the streetwears evolution page to the relevant information pages

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -146,12 +146,12 @@
                             </div>
                         </section> 
                             <section class="pictures">
-                                <img src="hip-hop.jpg" width="320px" height="400px">
-                                <img src="skating.jpg" width="320px" height="400px">
-                                <img src="cdg.jpg" width="320px" height="400px">
-                                <img src="basketball.jpg" width="320px" height="400px">
-                                <img src="Street-art.png"width="320px" height="400px">
-                                <img src="LV-Trainers.jpg"width="320px" height="400px">
+                                <a href="Hip-Hop.html"target="_blank"class="links"><img src="hip-hop.jpg" width="320px" height="400px"></a>
+                                <a href="Skating.html" target="_blank"class="links"><img src="skating.jpg" width="320px" height="400px"></a>
+                                <a href="Japanese Streetwear.html" target="_blank" class="links"><img src="cdg.jpg" width="320px" height="400px"></a>
+                                <a href="Basketball.html" target="_blank"class="links"><img src="basketball.jpg" width="320px" height="400px"></a>
+                                <a href="Street-art.html"target="_blank" class="links"><img src="Street-art.png"width="320px" height="400px"></a>
+                                <a href="Exclusives.html" target="_blank"class="links"><img src="LV-Trainers.jpg"width="320px" height="400px"></a>
                             </section>
                            
     </body>
