I have hyperlinked key words on the about us page that link to other website pages

--- a/about us.html
+++ b/about us.html
@@ -32,8 +32,8 @@
               <h1 class="header"> Our Mission</h1>
               <br><br>
               <p class = "margin"> Vibe Tribe is a hub for all creatives, influnced by and/or influincing street culture fashion. We have created a space for creatives, to collaborate as a collective, and hang out. No stress just vibes.
-                               If you consider yourself a creative join us on the day(s) convenient for you.  As well as our 24hr project space we will be hosting a range of activities through out the week.
-                               Sign up for exclusive events and updates.
+                               If you consider yourself a creative <a href="come to the hub.html" target="_blank">join us</a> on the day(s) convenient for you.  As well as our 24hr project space we will be hosting a range of activities through out the week.
+                               <a href="Exclusives.html" target="_blank">Sign up</a> for exclusive events and updates.
               </p>
               <br><br>
               <p2 class= "location">
